Added Jackson Dep for high JSON codec speed