@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'application' // for agent tracing
     id "com.gradleup.shadow" version "9.4.3"
     id 'org.graalvm.buildtools.native' version '1.1.3'
 }
@@ -9,6 +10,11 @@ version = '1.0-SNAPSHOT'
 
 dependencies {
     implementation 'io.netty:netty-all:4.2.15.Final'
+    implementation "com.fasterxml.jackson.core:jackson-databind:2.22.0"
+}
+
+application {
+    mainClass = "org.Amin.Contact.Server"
 }
 
 shadowJar {
@@ -21,9 +27,17 @@ graalvmNative{
         mainClass = "org.Amin.Contact.Server"
         useFatJar = true;
 
+        jvmArgs(
+                '-server',
+                "-XX:MaxGCPauseMillis=20",
+                "-XX:InitiatingHeapOccupancyPercent=45",
+                "-XX:+UnlockDiagnosticVMOptions",
+                "-XX:MaxDirectMemorySize=2G"
+        )
         buildArgs(
                 '--initialize-at-run-time=io.netty.channel.kqueue.KQueueEventArray',
-                '--initialize-at-run-time=io.netty.channel.kqueue.Native'
+                '--initialize-at-run-time=io.netty.channel.kqueue.Native',
+                '--enable-native-access=ALL-UNNAMED'
         )
     }
 
@@ -41,7 +55,7 @@ graalvmNative{
 
         metadataCopy {
             inputTaskNames.add("run")
-            outputDirectories.add("META-INF/native-image/<groupId>/<artifactId>/")
+            outputDirectories.add("META-INF/native-image/org.Amin/Contact-API")
             mergeWithExisting = true
         }
     }
